Update workflow configs

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - main
 
+# This is required to be able to update tags and create releases
 permissions:
   contents: write
 
@@ -19,16 +20,26 @@ jobs:
     if: ${{ github.event.pull_request.merged == true }}
 
     steps:
+      # Checkout the repository with fetch-tags set to true
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
         with:
           fetch-tags: true
 
-      - name: Tag Commit
-        id: tag-commit
+      # Get the version and update the tags to use in the release
+      - name: Tag
+        id: tag
         uses: issue-ops/semver@v0.1.0
         with:
           manifest-path: package.json
           workspace: ${{ github.workspace }}
           ref: main
+
+      # Use the version output from the previous step for the release
+      # Prepend a 'v' to the beginning (e.g. 'v1.2.3')
+      - name: Create Release
+        id: release
+        uses: issue-ops/releaser@v0.1.0
+        with:
+          tag: v${{ steps.tag.outputs.version }}
