--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
-    "@octokit/rest": "^20.0.1"
+    "@octokit/rest": "^20.0.1",
+    "yaml": "^2.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
