--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
   issue-form-template:
     description: The issue form template file name (e.g. `new-repository.yml`)
     required: true
+  parsed-issue-body:
+    description: The issue body parsed by `issue-ops/parser`
+    required: true
   workspace:
     default: ${{ github.workspace }}
     description:
