--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
     "@octokit/rest": "^20.0.1",
+    "dedent-js": "^1.0.1",
+    "handlebars": "^4.7.8",
     "yaml": "^2.3.2"
   },
   "devDependencies": {
