Update validator script type

--- a/.github/validator/config.yml
+++ b/.github/validator/config.yml
@@ -1,7 +1,7 @@
 validators:
   - field: read_team
-    script: team
+    script: team.js
     method: exists
   - field: write_team
-    script: team
+    script: team.js
     method: exists
