Update ESLint and TSConfig

--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -28,6 +28,8 @@ parserOptions:
   project:
     - './.github/linters/tsconfig.json'
     - './tsconfig.json'
+  extraFileExtensions:
+    - '.json'
 
 plugins:
   - 'jest'
@@ -49,29 +51,7 @@ rules:
     'import/no-commonjs': 'off',
     'import/no-dynamic-require': 'off',
     'import/no-namespace': 'off',
+    'jest/no-conditional-expect': 'off',
     'no-console': 'off',
     'prettier/prettier': 'error'
   }
-
-overrides:
-  - files:
-      - '*.json'
-    extends:
-      - plugin:jsonc/recommended-with-json
-    parser: jsonc-eslint-parser
-    parserOptions:
-      jsonSyntax: JSON
-  - files:
-      - '*.jsonc'
-    extends:
-      - plugin:jsonc/recommended-with-jsonc
-    parser: jsonc-eslint-parser
-    parserOptions:
-      jsonSyntax: JSONC
-  - files:
-      - '*.json5'
-    extends:
-      - plugin:jsonc/recommended-with-json5
-    parser: jsonc-eslint-parser
-    parserOptions:
-      jsonSyntax: JSON5
