--- a/.github/workflows/issue-created.yml
+++ b/.github/workflows/issue-created.yml
@@ -30,7 +30,7 @@ jobs:
         id: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version-file: .node-version
           cache: npm
 
       # Next, install the dependencies from `package.json`.
