--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,4 @@
-name: Super Linter
+name: Lint Codebase
 
 on:
   push:
@@ -8,15 +8,15 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: read
+  statuses: write
+
 jobs:
   lint:
     name: Lint Codebase
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
 
     steps:
       - name: Checkout
@@ -36,14 +36,8 @@ jobs:
         id: install
         run: npm ci
 
-      - name: Super Linter
-        id: super-linter
-        uses: super-linter/super-linter/slim@v6
+      - name: Lint Codebase
+        id: lint
+        uses: oxsecurity/megalinter/flavors/javascript@v7
         env:
-          DEFAULT_BRANCH: main
-          FILTER_REGEX_EXCLUDE: dist/**/*
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TYPESCRIPT_DEFAULT_STYLE: prettier
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_JAVASCRIPT_STANDARD: false
-          VALIDATE_JSCPD: false
