--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -20,6 +20,8 @@ DISABLE:
 # https://megalinter.io/latest/config-activation/
 DISABLE_LINTERS:
   - MARKDOWN_MARKDOWN_TABLE_FORMATTER
+  - REPOSITORY_KICS
+  - REPOSITORY_TRIVY
   - TYPESCRIPT_STANDARD
 
 # List of enabled but not blocking linters keys
