--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "issue-ops-validator",
   "description": "Validate issue form submissions",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "author": "Nick Alteen <ncalteen@github.com>",
   "type": "module",
   "homepage": "https://github.com/issue-ops/validator#readme",
@@ -43,8 +43,8 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@octokit/rest": "^21.0.2",
-    "dedent-js": "^1.0.1",
     "handlebars": "^4.7.8",
+    "ts-dedent": "^2.2.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
