--- a/.github/validator/config.yml
+++ b/.github/validator/config.yml
@@ -1,5 +1,5 @@
 validators:
   - field: read-team
-    script: team
+    script: team.js
   - field: write-team
-    script: team
+    script: team.js
